--- a/React/react-antd/src/App.css
+++ b/React/react-antd/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.dialog {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  border: solid 1px rebeccapurple;
+  width: 400px;
+  height: 300px;
+  text-align: center;
+  line-height: 100px;
+}
