--- a/Flutter/gourment/android/app/src/main/res/drawable/launch_background.xml
+++ b/Flutter/gourment/android/app/src/main/res/drawable/launch_background.xml
@@ -4,9 +4,13 @@
     <item android:drawable="@android:color/white" />
 
     <!-- You can insert your own image assets here -->
-     <item>
+<!--     <item>
         <bitmap
             android:gravity="center"
             android:src="@mipmap/launch_image" />
+    </item>-->
+<!--  这样写启动图可以全屏显示，不同屏幕可能会有拉伸  -->
+    <item android:drawable="@mipmap/launch_image">
+
     </item>
 </layer-list>
